# terminalvision-casca

./: .gitignore  README.md  cmdit_out.txt  go.mod  go.sum  main.go  projeto.txt  py.bat  pyproject.toml  requirements.txt  terminalvision-mcp.bat  test.bat  test_integration.py
casca/: go.mod  main.go
casca/api/: handlers.go  router.go
casca/internal/adapter/http/: server.go
casca/internal/infrastructure/: conpty.go
casca/internal/usecase/: keys.go  session.go
docs/plans/: 2026-05-01-terminalvision-mcp-implementation-plan.md  arquitetura-terminalvision.md
docs/specs/: 2026-05-01-terminalvision-mcp-design.md
internal/adapter/http/: server.go
internal/domain/: request.go  session.go
internal/infrastructure/: conpty.go
internal/usecase/: keys.go  session.go
mcp/: __init__.py
mcp/client/: casca_client.py
mcp/tools/: terminal_get_screen.py  terminal_send_keys.py  terminal_spawn.py
mcp/types/: types.py
terminalvision_mcp/: __init__.py  __main__.py  capture.py  key_mapper.py  main.py  session_manager.py  stability.py  types.py  vision_discovery.py
terminalvision_mcp/client/: casca_client.py
terminalvision_mcp/handlers/: __init__.py  pty_handler.py
terminalvision_mcp/tools/: __init__.py  terminal_get_screen.py  terminal_kill.py  terminal_list_sessions.py  terminal_resize.py  terminal_send_keys.py  terminal_spawn.py  terminal_wait.py
terminalvision_mcp/types/: __init__.py
tests/: __init__.py  test_capture.py  test_key_mapper.py  test_types.py
