[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminalvision-mcp"
version = "0.1.0"
description = "Universal MCP Server for terminal vision and control"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "TerminalVision Team" }
]
keywords = ["mcp", "terminal", "vision", "tui", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pyte>=0.8.0",
    "mss>=9.0.1",
    "pexpect>=4.9.0",
    "pydantic>=2.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
terminalvision-mcp = "terminalvision_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["terminalvision_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
